--- a/vsum/pom.xml
+++ b/vsum/pom.xml
@@ -33,10 +33,6 @@
         <!-- Vitruvius dependencies -->
         <dependency>
             <groupId>tools.vitruv</groupId>
-            <artifactId>tools.vitruv.applications.umljava</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>tools.vitruv</groupId>
             <artifactId>tools.vitruv.change.interaction</artifactId>
         </dependency>
         <dependency>
@@ -66,6 +62,12 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.jgit</groupId>
+            <artifactId>org.eclipse.jgit</artifactId>
+            <version>7.5.0.202512021534-r</version>
         </dependency>
     </dependencies>
 </project>
