--- a/vsum/pom.xml
+++ b/vsum/pom.xml
@@ -69,5 +69,10 @@
             <artifactId>org.eclipse.jgit</artifactId>
             <version>7.5.0.202512021534-r</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
     </dependencies>
 </project>
